--- a/dolfinweb/templates/dolfinweb/dfw_user_form_admin.html
+++ b/dolfinweb/templates/dolfinweb/dfw_user_form_admin.html
@@ -7,7 +7,7 @@
     <table class="table table-striped">
     {{ form }}
     </table>
-    <div class="container text-center">{% bootstrap_button "Save" button_type="submit" button_class="btn-primary btn-lg" %}</div>
+    <div class="container text-center">{% bootstrap_button "Save" button_type="submit" button_class="btn-info btn-lg text-white" %}</div>
 </form>
 {% endblock %}
 
