--- a/dolfinweb/templates/dolfinweb/dfw_user_register_form.html
+++ b/dolfinweb/templates/dolfinweb/dfw_user_register_form.html
@@ -10,7 +10,7 @@
         <tr><th>비밀번호</th><td>{{form.password1}}{{form.password1.helptext}}</td></tr>
         <tr><th>비밀번호 확인</th><td>{{form.password2}}{{form.password2.helptext}}</td></tr>
     </table>
-    <div class="container text-center">{% bootstrap_button "Register" button_type="submit" button_class="btn-primary btn-lg" %}</div>
+    <div class="container text-center">{% bootstrap_button "가입" button_type="submit" button_class="btn-info btn-lg text-white" %}</div>
 </form>
 {% endblock %}
 
