--- a/DolfinSync.ui
+++ b/DolfinSync.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1084</width>
-    <height>667</height>
+    <width>703</width>
+    <height>561</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -200,13 +200,26 @@
      <string>폴더 선택</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnTest">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>580</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Test</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1084</width>
+     <width>703</width>
      <height>21</height>
     </rect>
    </property>
